--- a/index.html
+++ b/index.html
@@ -394,6 +394,11 @@
 
             renderCalendar();
         });
+
+        
+  if (window.location.hostname === 'bj-media.it.com') {
+    window.location.href = 'https://www.bj-media.it.com' + window.location.pathname;
+  }
     </script>
 </body>
 </html>
