--- a/index.html
+++ b/index.html
@@ -395,7 +395,9 @@
             renderCalendar();
         });
 
-
+        if (window.location.host === 'bj-media.it.com') {
+     window.location.href = 'https://www.bj-media.it.com';
+      }
     </script>
 </body>
 </html>
