--- a/index.html
+++ b/index.html
@@ -394,7 +394,9 @@
 
             renderCalendar();
         });
-
+        if (window.location.hostname === 'bj-media.it.com') {
+        window.location.href = 'https://www.bj-media.it.com' + window.location.pathname;
+      }
        
     </script>
 </body>
