--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BJ Media - Рекламное агентство | Реклама и AI для вашего бизнеса</title>
-    <meta name="description" content="BJ Media приводит клиентов в ваш бизнес через таргетированную рекламу в Facebook, Instagram и внедрение AI-агентов для повышения конверсии.">
-
+    <title>BJ Media → AI-Рекламное Агентство | +30-150% Клиентов через ИИ и Таргет</title>
+    <meta name="description" content="🚀 Приводим платящих клиентов в ваш бизнес через AI-оптимизацию рекламы в Meta/Facebook/Instagram и внедрение умных чат-ботов. Гарантия результата!">
+    <meta name="keywords" content="AI маркетинг, рекламное агентство, привлечение клиентов, ИИ для бизнеса, автоматизация продаж">
+    <meta property="og:title" content="BJ Media - AI-маркетинг для вашего бизнеса">
+    <meta property="og:description" content="Увеличиваем продажи клиентов с помощью искусственного интеллекта">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="путь_к_вашему_лого.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -397,6 +400,25 @@
         if (window.location.hostname === 'bj-media.it.com') {
         window.location.href = 'https://www.bj-media.it.com' + window.location.pathname;
       }
+
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "AdvertisingAgency",
+          "name": "BJ Media",
+          "url": "https://bj-media.it.com",
+          "description": "AI-рекламное агентство полного цикла",
+          "service": [
+            "AI-таргетинг рекламы",
+            "Чат-боты для продаж",
+            "Автоматизированный маркетинг",
+            "Генерация лидов с помощью ИИ"
+          ],
+          "areaServed": ["Bishkek", "kyrgyzstan"],
+         
+          ]
+        }
+    </script>
        
     </script>
 </body>
