--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="BJ Media - AI-маркетинг для вашего бизнеса">
     <meta property="og:description" content="Увеличиваем продажи клиентов с помощью искусственного интеллекта">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" href=""C:\Users\user\Downloads\BJ (1).png"" type="image/png">
+    <link rel="icon" href="/favicon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
