--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="U90NBTcfWOnjFLgP5w0p8SaTectQ5CjOx1fCrgwhSP4" />
+    <title>BJ-Media</title>
     <title>BJ-Media | AI-Рекламное Агентство</title>
     <meta name="description" content="🚀 Приводим платящих клиентов в ваш бизнес через AI-оптимизацию рекламы в Meta/Facebook/Instagram и внедрение умных чат-ботов. Гарантия результата!">
     <meta name="keywords" content="AI маркетинг, рекламное агентство, привлечение клиентов, ИИ для бизнеса, автоматизация продаж">
