--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         .glow-effect {
             box-shadow: 0 0 15px rgba(139, 92, 246, 0.4), 0 0 30px rgba(139, 92, 246, 0.2);
         }
+        .logo {
+            width: 150px; /* Ширина лого */
+            height: auto; /* Высота подстроится */
+            margin: 20px; /* Отступы */
+        }
     </style>
 
     <script>
@@ -44,7 +49,11 @@
     </script>
 </head>
 <body class="bg-brand-dark text-gray-200">
-
+    <a href="https://www.bj-media.it.com">
+        <img src="logo.png"  
+            alt="BJ-Media"   
+            class="logo" >
+     </a>
     <!-- Header -->
     <header class="sticky top-0 z-50 bg-brand-dark/80 backdrop-blur-sm border-b border-gray-700/50">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
