--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </script>
 </head>
 <body class="bg-brand-dark text-gray-200">
-    <a href="https://www.bj-media.it.com">
+    <a href="/logo.png">
         <img src="logo.png"  
             alt="BJ-Media"   
             class="logo" >
