--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="BJ Media - AI-маркетинг для вашего бизнеса">
     <meta property="og:description" content="Увеличиваем продажи клиентов с помощью искусственного интеллекта">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" href="/favicon.png" type="image/png">
+    <link rel="icon" href="/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,11 +24,7 @@
         .glow-effect {
             box-shadow: 0 0 15px rgba(139, 92, 246, 0.4), 0 0 30px rgba(139, 92, 246, 0.2);
         }
-        .logo {
-            width: 150px; /* Ширина лого */
-            height: auto; /* Высота подстроится */
-            margin: 20px; /* Отступы */
-        }
+        
     </style>
 
     <script>
@@ -47,13 +43,12 @@
             }
         }
     </script>
+    <script type="application/ld+json">
+        {"@context": "https://schema.org","@type": "Organization","name": "BJ Media","url": "https://www.bj-media.it.com","logo": "/logo.png"}
+    </script>
 </head>
 <body class="bg-brand-dark text-gray-200">
-    <a href="/logo.png">
-        <img src="logo.png"  
-            alt="BJ-Media"   
-            class="logo" >
-     </a>
+
     <!-- Header -->
     <header class="sticky top-0 z-50 bg-brand-dark/80 backdrop-blur-sm border-b border-gray-700/50">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
