--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="U90NBTcfWOnjFLgP5w0p8SaTectQ5CjOx1fCrgwhSP4" />
-    <title>BJ-Media</title>
     <title>BJ-Media | AI-Рекламное Агентство</title>
-    <meta name="description" content="🚀 Приводим платящих клиентов в ваш бизнес через AI-оптимизацию рекламы в Meta/Facebook/Instagram и внедрение умных чат-ботов. Гарантия результата!">
+    <meta property="og:image" content="https://bj-media.it.com/logo.png" />
+    <meta name="description" content="Приводим платящих клиентов в ваш бизнес через AI-оптимизацию рекламы в Meta/Facebook/Instagram и внедрение умных чат-ботов. Гарантия результата!">
     <meta name="keywords" content="AI маркетинг, рекламное агентство, привлечение клиентов, ИИ для бизнеса, автоматизация продаж">
-    <meta property="og:title" content="BJ Media - AI-маркетинг для вашего бизнеса">
-    <meta property="og:description" content="Увеличиваем продажи клиентов с помощью искусственного интеллекта">
+    <meta property="og:title" content="BJ-Media">
+    <meta property="og:url" content="https://www.bj-media.it.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Маркетинговое агентство нового поколения.">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" href="/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
